Add CoreML compute unit support and update linking
Introduces a new ComputeUnit enum to support CoreML and Vulkan GPU options. Updates plugin properties and UI to allow selection of compute unit. CMake configuration now links CoreML and Vision frameworks when CoreML segmenter is enabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,10 @@ target_sources(
 )
 if(COREML_SELFIE_SEGMENTER_FRAMEWORK_PATH)
   target_sources(SelfieSegmenter PRIVATE src/SelfieSegmenter/CoreMLSelfieSegmenter.mm)
-  target_link_libraries(SelfieSegmenter PUBLIC KaitoTokyo::CoreMLSelfieSegmenter)
+  target_link_libraries(
+    SelfieSegmenter
+    PUBLIC "-framework CoreML" "-framework Vision" KaitoTokyo::CoreMLSelfieSegmenter
+  )
 endif()
 target_include_directories(SelfieSegmenter PUBLIC ${CMAKE_SOURCE_DIR}/src/SelfieSegmenter)
 target_link_libraries(SelfieSegmenter PUBLIC ncnn::ncnn)
