Refactor NcnnSelfieSegmenter and update constants
Inlined the process() method into NcnnSelfieSegmenter.hpp and removed NcnnSelfieSegmenter.cpp. Renamed static constants to use k-style naming in CoreMLSelfieSegmenter, NcnnSelfieSegmenter, and MaskBuffer for consistency. Updated CMakeLists.txt to remove the deleted source file. Minor cleanup in ShapeConverter.cpp and test CMakeLists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,7 +145,7 @@ endif()
 add_library(SelfieSegmenter STATIC)
 target_sources(
   SelfieSegmenter
-  PRIVATE src/SelfieSegmenter/ShapeConverter.cpp src/SelfieSegmenter/NcnnSelfieSegmenter.cpp
+  PRIVATE src/SelfieSegmenter/ShapeConverter.cpp
 )
 if(COREML_SELFIE_SEGMENTER_FRAMEWORK_PATH)
   target_sources(SelfieSegmenter PRIVATE src/SelfieSegmenter/CoreMLSelfieSegmenter.mm)
