--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,12 +46,8 @@ if(VCPKG_TARGET_TRIPLET)
   find_package(CURL CONFIG REQUIRED)
   find_package(fmt CONFIG REQUIRED)
   find_package(ncnn CONFIG REQUIRED)
-  find_package(OpenCV CONFIG REQUIRED)
 
   add_library(ncnn::ncnn ALIAS ncnn)
-  add_library(OpenCV::opencv_core ALIAS opencv_core)
-  add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
-  add_library(OpenCV::opencv_imgcodecs ALIAS opencv_imgcodecs)
 elseif(USE_PKGCONFIG)
   find_package(PkgConfig REQUIRED)
 
@@ -78,20 +74,6 @@ elseif(USE_PKGCONFIG)
   target_include_directories(ncnn::ncnn INTERFACE ${PC_NCNN_INCLUDE_DIRS})
   target_compile_definitions(ncnn::ncnn INTERFACE ${PC_NCNN_CFLAGS_OTHER} PREFIXED_NCNN_HEADERS)
   target_link_directories(ncnn::ncnn INTERFACE ${PC_NCNN_LIBRARY_DIRS})
-
-  # --- OpenCV ---
-  pkg_check_modules(PC_OPENCV REQUIRED opencv4)
-  add_library(OpenCV::opencv_core INTERFACE IMPORTED)
-  target_link_libraries(OpenCV::opencv_core INTERFACE opencv_core)
-  target_include_directories(OpenCV::opencv_core INTERFACE ${PC_OPENCV_INCLUDE_DIRS})
-  target_compile_definitions(OpenCV::opencv_core INTERFACE ${PC_OPENCV_CFLAGS_OTHER})
-  target_link_directories(OpenCV::opencv_core INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
-  add_library(OpenCV::opencv_imgproc INTERFACE IMPORTED)
-  target_link_libraries(OpenCV::opencv_imgproc INTERFACE opencv_imgproc)
-  target_link_directories(OpenCV::opencv_imgproc INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
-  add_library(OpenCV::opencv_imgcodecs INTERFACE IMPORTED)
-  target_link_libraries(OpenCV::opencv_imgcodecs INTERFACE opencv_imgcodecs)
-  target_link_directories(OpenCV::opencv_imgcodecs INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
 elseif(APPLE AND BUILD_WITH_HOMEBREW)
   list(APPEND CMAKE_PREFIX_PATH /opt/homebrew/opt/libomp)
   list(APPEND CMAKE_PREFIX_PATH /opt/homebrew)
@@ -101,12 +83,6 @@ elseif(APPLE AND BUILD_WITH_HOMEBREW)
   find_package(CURL MODULE REQUIRED)
   find_package(fmt CONFIG REQUIRED)
   find_package(ncnn CONFIG REQUIRED)
-  find_package(OpenCV CONFIG REQUIRED)
-
-  add_library(ncnn::ncnn ALIAS ncnn)
-  add_library(OpenCV::opencv_core ALIAS opencv_core)
-  add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
-  add_library(OpenCV::opencv_imgcodecs ALIAS opencv_imgcodecs)
 else()
   message(FATAL_ERROR "Either USE_PKGCONFIG or VCPKG_TARGET_TRIPLET must be set.")
 endif()
@@ -191,9 +167,58 @@ set_target_properties(
 )
 
 if(BUILD_TESTING)
-  enable_testing()
+  if(VCPKG_TARGET_TRIPLET)
+    find_package(OpenCV CONFIG REQUIRED)
+    add_library(OpenCV::opencv_core ALIAS opencv_core)
+    add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
+    add_library(OpenCV::opencv_imgcodecs ALIAS opencv_imgcodecs)
 
-  find_package(GTest CONFIG REQUIRED)
+    find_package(GTest CONFIG REQUIRED)
+  elseif(USE_PKGCONFIG)
+    # --- OpenCV ---
+    pkg_check_modules(PC_OPENCV REQUIRED opencv4)
+    add_library(OpenCV::opencv_core INTERFACE IMPORTED)
+    target_link_libraries(OpenCV::opencv_core INTERFACE opencv_core)
+    target_include_directories(OpenCV::opencv_core INTERFACE ${PC_OPENCV_INCLUDE_DIRS})
+    target_compile_definitions(OpenCV::opencv_core INTERFACE ${PC_OPENCV_CFLAGS_OTHER})
+    target_link_directories(OpenCV::opencv_core INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
+    add_library(OpenCV::opencv_imgproc INTERFACE IMPORTED)
+    target_link_libraries(OpenCV::opencv_imgproc INTERFACE opencv_imgproc)
+    target_link_directories(OpenCV::opencv_imgproc INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
+    add_library(OpenCV::opencv_imgcodecs INTERFACE IMPORTED)
+    target_link_libraries(OpenCV::opencv_imgcodecs INTERFACE opencv_imgcodecs)
+    target_link_directories(OpenCV::opencv_imgcodecs INTERFACE ${PC_OPENCV_LIBRARY_DIRS})
+
+    pkg_check_modules(PC_GTEST REQUIRED gtest)
+    add_library(GTest::gtest INTERFACE IMPORTED)
+    target_link_libraries(GTest::gtest INTERFACE ${PC_GTEST_LIBRARIES})
+    target_include_directories(GTest::gtest INTERFACE ${PC_GTEST_INCLUDE_DIRS})
+    target_compile_definitions(GTest::gtest INTERFACE ${PC_GTEST_CFLAGS_OTHER})
+    target_link_directories(GTest::gtest INTERFACE ${PC_GTEST_LIBRARY_DIRS})
+
+    pkg_check_modules(PC_GTEST_MAIN REQUIRED gtest)
+    add_library(GTest::gtest_main INTERFACE IMPORTED)
+    target_link_libraries(GTest::gtest_main INTERFACE ${PC_GTEST_MAIN_LIBRARIES})
+    target_include_directories(GTest::gtest_main INTERFACE ${PC_GTEST_MAIN_INCLUDE_DIRS})
+    target_compile_definitions(GTest::gtest_main INTERFACE ${PC_GTEST_MAIN_CFLAGS_OTHER})
+    target_link_directories(GTest::gtest_main INTERFACE ${PC_GTEST_MAIN_LIBRARY_DIRS})
+  elseif(APPLE AND BUILD_WITH_HOMEBREW)
+    list(APPEND CMAKE_PREFIX_PATH /opt/homebrew/opt/libomp)
+    list(APPEND CMAKE_PREFIX_PATH /opt/homebrew)
+    list(APPEND CMAKE_PREFIX_PATH /usr/local/opt/libomp)
+    list(APPEND CMAKE_PREFIX_PATH /usr/local)
+
+    find_package(OpenCV CONFIG REQUIRED)
+    add_library(OpenCV::opencv_core ALIAS opencv_core)
+    add_library(OpenCV::opencv_imgproc ALIAS opencv_imgproc)
+    add_library(OpenCV::opencv_imgcodecs ALIAS opencv_imgcodecs)
+
+    find_package(GTest CONFIG REQUIRED)
+  else()
+    message(FATAL_ERROR "Either USE_PKGCONFIG or VCPKG_TARGET_TRIPLET must be set.")
+  endif()
+
+  enable_testing()
 
   add_subdirectory(tests)
 endif()
