--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -56,9 +56,14 @@ jobs:
             -UserName "${{ github.repository_owner }}" \
             -Password "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: "Install dependencies"
-        run: "brew install googletest"
+      - name: "Build CoreMLSelfieSegmenter"
+        working-directory: "vendor/CoreMLSelfieSegmenter"
+        run: |
+          brew install xcodegen
+          xcodegen generate
+          ./Scripts/build.bash
 
+        run: "./Scripts/build.bash"
       - name: "Install dependencies from vcpkg"
         env:
           VCPKG_ENABLE_TESTS: "1"
