Update CI workflows to build CoreMLSelfieSegmenter
Added steps to build the CoreMLSelfieSegmenter component in the build-project and my-testing GitHub Actions workflows. This ensures the segmenter is built as part of the CI process, improving integration and test coverage.

--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -188,6 +188,13 @@ jobs:
       - name: "Install dependencies from vcpkg"
         run: ".github/scripts/install-vcpkg-macos.bash"
 
+      - name: "Build CoreMLSelfieSegmenter"
+        working-directory: "vendor/CoreMLSelfieSegmenter"
+        run: |
+          brew install xcodegen
+          xcodegen generate
+          ./Scripts/build.bash
+
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
         with:
@@ -319,6 +326,13 @@ jobs:
 
       - name: "Install dependencies from vcpkg"
         run: ".github/scripts/install-vcpkg-macos.bash"
+
+      - name: "Build CoreMLSelfieSegmenter"
+        working-directory: "vendor/CoreMLSelfieSegmenter"
+        run: |
+          brew install xcodegen
+          xcodegen generate
+          ./Scripts/build.bash
 
       - name: Build Plugin 🧱
         uses: ./.github/actions/build-plugin
