Add PP-HumanSegV2 Lite model and segmenter integration
Introduces the PP-HumanSegV2 Lite NCNN model and integrates it into the codebase. Adds model files, updates PluginConfig to support both Mediapipe and PP-HumanSegV2 segmenters, and implements PPHumansegv2LiteNcnnSelfieSegmenter. Updates RenderingContext to use the new segmenter and refactors related code and tests for clarity and extensibility. Also updates .gitignore and build scripts to support new model conversion.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 !/vcpkg-triplets
 !/vendor
 /vendor/ConvertNcnn/*
-!/vendor/ConvertNcnn/convert.bash
+!/vendor/ConvertNcnn/*.bash
 !.aiexclude
 !.clang-format
 !.gersemirc
