Add FAQ.md and update docs dependencies
Added FAQ.md to provide a knowledge base for Live Background Removal Lite and updated .gitignore to include FAQ.md. Also added @mlc-ai/web-llm dependency to docs/package.json and package-lock.json.

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/svelte": "^7.2.2",
+    "@mlc-ai/web-llm": "^0.2.79",
     "astro": "^5.15.9",
     "svelte": "^5.43.14",
     "typescript": "^5.9.3"
