--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/svelte": "^7.2.2",
     "@mlc-ai/web-llm": "^0.2.79",
     "astro": "^5.15.9",
