--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,10 @@ if(APPLE)
     ${PROJECT_NAME}
     PRIVATE "-Wl,-exported_symbols_list,${CMAKE_SOURCE_DIR}/cmake/macos/exported_symbols_list.txt"
   )
+elseif(MSVC)
+  target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/cmake/windows/exported_symbols.def")
+else()
+  target_link_options(${PROJECT_NAME} PRIVATE "-Wl,--version-script,${CMAKE_SOURCE_DIR}/cmake/linux/version_script.map")
 endif()
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
