--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -552,6 +552,8 @@ jobs:
             -Name "GitHub" `
             -UserName "kaito-tokyo" `
             -Password "${{ secrets.GITHUB_TOKEN }}"
+          & $NUGET_EXE_PATH setapikey "${{ secrets.GITHUB_TOKEN }}" `
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json"
 
       - name: Install dependencies from vcpkg
         shell: bash
