Refactor vcpkg config and test infra, remove overlays
Switches vcpkg to use a custom registry for libpng, ncnn, and wolfssl, removing overlay ports and related files. Updates CI workflows to use the new binary source and removes NuGet/mono setup. Refactors test workflow, eliminates OpenCV dependency from tests, and updates CMake to import stb as INTERFACE IMPORTED. Cleans up vcpkg.json by removing test features and dependencies.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,7 +5,7 @@ set(TEST_LIST "")
 add_executable(NcnnSelfieSegmenter_test SelfieSegmenter/NcnnSelfieSegmenter_test.cpp)
 target_link_libraries(
   NcnnSelfieSegmenter_test
-  PRIVATE GTest::gtest_main SelfieSegmenter OpenCV::opencv_core OpenCV::opencv_imgproc OpenCV::opencv_imgcodecs
+  PRIVATE GTest::gtest_main SelfieSegmenter stb::stb
 )
 list(APPEND TEST_LIST NcnnSelfieSegmenter_test)
 
