Disable testing in LiveBackgroundRemovalLite builds
Added -DBUILD_TESTING=OFF to the CMake configuration in both Arch PKGBUILDs and the Flatpak manifest for LiveBackgroundRemovalLite. This change disables building tests, streamlining the build process for package distribution.

--- a/unsupported/arch/live-backgroundremoval-lite-git/PKGBUILD
+++ b/unsupported/arch/live-backgroundremoval-lite-git/PKGBUILD
@@ -29,6 +29,7 @@ build() {
     -DENABLE_FRONTEND_API=ON \
     -DENABLE_QT=ON \
     -DUSE_PKGCONFIG=ON \
+    -DBUILD_TESTING=OFF \
     -GNinja
   cmake --build build
 }
