--- a/unsupported/arch/live-backgroundremoval-lite/PKGBUILD
+++ b/unsupported/arch/live-backgroundremoval-lite/PKGBUILD
@@ -21,6 +21,7 @@ build() {
     -DENABLE_FRONTEND_API=ON \
     -DENABLE_QT=ON \
     -DUSE_PKGCONFIG=ON \
+    -DBUILD_TESTING=OFF \
     -GNinja
   cmake --build build
 }
