Disable testing in LiveBackgroundRemovalLite builds (#344)
Added -DBUILD_TESTING=OFF to the CMake configuration in both Arch PKGBUILDs and the Flatpak manifest for LiveBackgroundRemovalLite. This change disables building tests, streamlining the build process for package distribution.

--- a/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json
+++ b/unsupported/flatpak/com.obsproject.Studio.Plugin.LiveBackgroundRemovalLite.json
@@ -40,7 +40,8 @@
         "-DCMAKE_PREFIX_PATH=/app/plugins/LiveBackgroundRemovalLite",
         "-DENABLE_FRONTEND_API=ON",
         "-DENABLE_QT=ON",
-        "-DUSE_PKGCONFIG=ON"
+        "-DUSE_PKGCONFIG=ON",
+        "-DBUILD_TESTING=OFF"
       ],
       "sources": [
         {
