Add and update GitHub Actions for docs build and deploy
Introduces a new build-docs workflow for building documentation on push and PRs to main. Refactors deploy-docs workflow to streamline deployment, update triggers, and use node version from package.json. Also adds Node.js 24.x engine requirement to docs/package.json for consistency with CI.

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,34 +1,23 @@
-name: Deploy Docs
+name: Build Docs
 
 on:
+  pull_request:
+    branches: [main]
   push:
     branches: [main]
-  release:
-    types: [published, edited]
-  workflow_dispatch:
-
-concurrency:
-  group: pages
-  cancel-in-progress: false
 
 env:
   BUILD_PATH: docs
 
 jobs:
-  deploy:
-    name: Deploy Docs
+  build:
+    name: Build Docs
 
     runs-on: ubuntu-24.04
     timeout-minutes: 10
 
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
     permissions:
       contents: read
-      id-token: write
-      pages: write
 
     steps:
       - name: Checkout
@@ -57,7 +46,3 @@ jobs:
           SITE: ${{ steps.pages.outputs.origin }}
           BASE: ${{ steps.pages.outputs.base_path }}
         run: npx astro build --site "$SITE" --base "$BASE"
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
