--- a/.github/workflows/issue-first-responder.yaml
+++ b/.github/workflows/issue-first-responder.yaml
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - id: 'gemini-response'
+      - id: "gemini-response"
         name: Generate response from Gemini
-        uses: 'google-github-actions/run-gemini-cli@2a77eb258d8d2447292fd5d9df6e7b49533d4f37'
+        uses: "google-github-actions/run-gemini-cli@2a77eb258d8d2447292fd5d9df6e7b49533d4f37"
         with:
           gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
           prompt: |
@@ -33,9 +33,9 @@ jobs:
             **Issue Body:**
             ${{ github.event.issue.body }}
 
-      - id: 'triage-label'
+      - id: "triage-label"
         name: Triage Issue Label
-        uses: 'google-github-actions/run-gemini-cli@2a77eb258d8d2447292fd5d9df6e7b49533d4f37'
+        uses: "google-github-actions/run-gemini-cli@2a77eb258d8d2447292fd5d9df6e7b49533d4f37"
         with:
           gemini_api_key: ${{ secrets.GEMINI_API_KEY }}
           prompt: |
