Add version history pages and GitHub releases integration
Introduces new pages for version history under /versions, including dynamic fetching of GitHub releases using the Octokit library. Adds DefineLocalDate custom element for date formatting, updates .editorconfig for consistent formatting, and makes minor layout and content improvements. Also adds project metadata constants and updates dependencies to include @octokit/rest.

--- a/.editorconfig
+++ b/.editorconfig
@@ -41,3 +41,11 @@ indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
+
+[*.{js,ts}]
+indent_style = space
+indent_size = 2
+
+[*.astro]
+indent_style = space
+indent_size = 2
