Revamp release pages with dynamic asset info and styling
Refactored the release and version pages to dynamically fetch and display release assets, file hashes, and sizes using GitHub API. Added new download button styles, improved file information layout, and included JSON-LD structured data for SEO. Introduced 'pretty-bytes' dependency for human-readable file sizes and enhanced pre-release warnings. Updated CSS for better UI consistency across download and version pages.

--- a/docs/package.json
+++ b/docs/package.json
@@ -18,6 +18,7 @@
     "@mlc-ai/web-llm": "^0.2.80",
     "@octokit/rest": "^22.0.1",
     "astro": "^5.16.6",
+    "pretty-bytes": "^7.1.0",
     "svelte": "^5.46.0",
     "typescript": "^5.9.3"
   },
