Add SRI and provenance to docs build and deploy
Enhances documentation build and deployment workflows by adding Subresource Integrity (SRI) hashes to JS/CSS assets and generating provenance metadata. Introduces new scripts for SRI and provenance, updates dependencies to include posthtml, and modifies GitHub Actions to run these scripts and handle provenance attestation and artifact upload.

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -45,4 +45,8 @@ jobs:
         env:
           SITE: ${{ steps.pages.outputs.origin }}
           BASE: ${{ steps.pages.outputs.base_path }}
-        run: npx astro build --site "$SITE" --base "$BASE"
+        run: |
+          npx astro build --site "$SITE" --base "$BASE"
+          node scripts/add-sri.mjs dist
+          node scripts/generate-provenance.mjs dist provenance.json
+          mv provenance.json dist/provenance.json
