--- a/docs/package.json
+++ b/docs/package.json
@@ -19,6 +19,7 @@
     "@octokit/rest": "^22.0.1",
     "astro": "^5.16.6",
     "nanostores": "^1.1.0",
+    "posthtml": "^0.16.7",
     "pretty-bytes": "^7.1.0",
     "svelte": "^5.46.0",
     "typescript": "^5.9.3"
