Add CSP hash generation to docs build and deploy
Updated build and deploy workflows to run the add-csp-hashes script after building documentation. Also added an artifact upload step to the build-docs workflow to upload the built documentation.

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -48,5 +48,11 @@ jobs:
         run: |
           npx astro build --site "$SITE" --base "$BASE"
           node scripts/add-sri.mjs dist
+          node scripts/add-csp-hashes.mjs dist
           node scripts/generate-provenance.mjs dist provenance.json
           mv provenance.json dist/provenance.json
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ${{ env.BUILD_PATH }}/dist
