--- a/.github/workflows/daily-website-security-check.yaml
+++ b/.github/workflows/daily-website-security-check.yaml
@@ -10,6 +10,7 @@ jobs:
     name: Run Security Check
 
     runs-on: ubuntu-24.04
+    timeout-minutes: 10
 
     permissions:
       attestations: read
@@ -31,6 +32,7 @@ jobs:
             --bundle provenance.attestation.jsonl
 
           rm -rf site
+          mkdir -p site
           jq -r --arg base "https://kaito-tokyo.github.io/live-backgroundremoval-lite/" '
             .subject[] |
             .name as $url |
@@ -38,7 +40,7 @@ jobs:
             "url = \"\($url)\"",
             "output = \"site/\($path)\"",
             "create-dirs"
-          ' provenance.json | curl --retry 3 -K -
+          ' provenance.json | curl --retry 3 -fsS -K -
 
           jq -r --arg base "https://kaito-tokyo.github.io/live-backgroundremoval-lite/" '
             .subject[] |
