--- a/.github/workflows/daily-website-security-check.yaml
+++ b/.github/workflows/daily-website-security-check.yaml
@@ -5,6 +5,10 @@ on:
     - cron: "23 11 * * *"
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: false
+
 jobs:
   security-check:
     name: Run Security Check
