--- a/.github/workflows/daily-website-security-check.yaml
+++ b/.github/workflows/daily-website-security-check.yaml
@@ -33,7 +33,7 @@ jobs:
             -O "https://kaito-tokyo.github.io/live-backgroundremoval-lite/provenance.json" \
             -O "https://kaito-tokyo.github.io/live-backgroundremoval-lite/provenance.attestation.jsonl"
 
-          gh attestation verify provenance.json \
+          GH_FORCE_TTY="100%" gh attestation verify provenance.json \
             --repo kaito-tokyo/live-backgroundremoval-lite \
             --bundle provenance.attestation.jsonl
 
