--- a/docs/package.json
+++ b/docs/package.json
@@ -13,17 +13,15 @@
     "node": "24.x"
   },
   "dependencies": {
-    "@astrojs/lit": "^4.3.0",
     "@astrojs/sitemap": "^3.6.0",
-    "@astrojs/svelte": "^7.2.4",
     "@mlc-ai/web-llm": "^0.2.80",
+    "@nanostores/lit": "^0.2.3",
     "@octokit/rest": "^22.0.1",
-    "@webcomponents/template-shadowroot": "^0.2.1",
     "astro": "^5.16.6",
     "lit": "^3.3.1",
+    "nanostores": "^1.1.0",
     "posthtml": "^0.16.7",
     "pretty-bytes": "^7.1.0",
-    "svelte": "^5.46.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
