--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false
   },
   "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"]
