--- a/docs/package.json
+++ b/docs/package.json
@@ -19,12 +19,14 @@
     "@octokit/rest": "^22.0.1",
     "astro": "^5.16.6",
     "lit": "^3.3.1",
+    "marked": "^17.0.1",
     "nanostores": "^1.1.0",
     "posthtml": "^0.16.7",
     "pretty-bytes": "^7.1.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/marked": "^5.0.2",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.4.1"
