--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -2,15 +2,16 @@
   "$schema": "https://raw.githubusercontent.com/microsoft/vcpkg-tool/main/docs/vcpkg-configuration.schema.json",
   "default-registry": {
     "kind": "git",
-    "baseline": "cfcbdb245f1179a5a493890a0b69531d66969e62",
+    "baseline": "b8927a1f9dd394496414668e1d2f94b2559d45a8",
     "repository": "https://github.com/microsoft/vcpkg"
   },
   "registries": [
     {
       "kind": "git",
-      "baseline": "901fdb51caca7b97a3fb37810642dc28631ece49",
+      "baseline": "5d38ae6cf1d74f55bf2d7badeea60f8b793ee3fd",
       "repository": "https://github.com/kaito-tokyo/vcpkg-obs-kaito-tokyo",
       "packages": [
+        "ncnn",
         "wolfssl"
       ]
     }
